--- a/App/backend/Dockerfile
+++ b/App/backend/Dockerfile
@@ -2,4 +2,4 @@ FROM php:8.3-apache
 
 RUN docker-php-ext-install mysqli && docker-php-ext-enable mysqli
 
-COPY src/ /var/www/html/
+COPY . /var/www/html/
